# YoloDataSetTools

./: CMakeLists.txt  LICENSE  README.md
FrameToPlateDataset/: CMakeLists.txt  YoloLabel.cpp  YoloLabel.h  main.cpp
FrameToPlateDataset/test/: 2021-07-19_T_10-00-59-061_camera_2_lane_2.txt
FrameToPlateDataset/test (copy)/: 2021-07-19_T_08-09-45-813_camera_1_lane_2.txt
FrameToPlateDataset/test (copy)/ocr/: 2021-07-19_T_08-09-45-813_camera_1_lane_2.jpg_0.txt  2021-07-19_T_08-09-45-813_camera_1_lane_2.jpg_1.txt  2021-07-19_T_10-00-59-061_camera_2_lane_2.jpg_0.txt
FrameToPlateDataset/test/ocr/: 2021-07-19_T_08-09-45-813_camera_1_lane_2.jpg_0.txt  2021-07-19_T_08-09-45-813_camera_1_lane_2.jpg_1.txt  2021-07-19_T_10-00-59-061_camera_2_lane_2.jpg_0.txt
YoloClassSplitter/: CMakeLists.txt  main.cpp
YoloLabelSearch/: CMakeLists.txt  main.cpp
YoloStatics/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tst_FrameToPlate.cpp  tst_Template.cpp
